# otus

homework_1/exercise_1/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
